--- a/The JBB/Base.lproj/Main.storyboard
+++ b/The JBB/Base.lproj/Main.storyboard
@@ -140,11 +140,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="UOw-4O-uYy">
-                                <rect key="frame" x="0.0" y="20" width="414" height="56"/>
+                                <rect key="frame" x="0.0" y="60" width="414" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="xrR-dp-lup">
-                                <rect key="frame" x="20" y="157" width="374" height="631"/>
+                                <rect key="frame" x="20" y="197" width="374" height="591"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="S8u-IA-ryz">
                                     <size key="itemSize" width="179" height="198"/>
@@ -254,20 +254,30 @@
                                 </cells>
                             </collectionView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kYf-qL-MLz">
-                                <rect key="frame" x="20" y="96" width="384" height="41"/>
+                                <rect key="frame" x="20" y="136" width="384" height="41"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                 <color key="textColor" name="Bistre"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M6t-4Q-sQO">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="oyG-ld-44u"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="PoL-74-VOu"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="UOw-4O-uYy" firstAttribute="top" secondItem="PoL-74-VOu" secondAttribute="top" constant="20" id="0Yf-yy-zd1"/>
                             <constraint firstItem="xrR-dp-lup" firstAttribute="leading" secondItem="PoL-74-VOu" secondAttribute="leading" constant="20" id="ChP-yH-zkf"/>
+                            <constraint firstItem="PoL-74-VOu" firstAttribute="trailing" secondItem="M6t-4Q-sQO" secondAttribute="trailing" id="Dsy-WW-c1o"/>
+                            <constraint firstItem="UOw-4O-uYy" firstAttribute="top" secondItem="M6t-4Q-sQO" secondAttribute="bottom" constant="10" id="GQC-1R-4Kc"/>
                             <constraint firstItem="PoL-74-VOu" firstAttribute="trailing" secondItem="kYf-qL-MLz" secondAttribute="trailing" constant="10" id="ICt-eX-y8p"/>
                             <constraint firstItem="kYf-qL-MLz" firstAttribute="top" secondItem="UOw-4O-uYy" secondAttribute="bottom" constant="20" id="Jqq-k3-5PU"/>
                             <constraint firstItem="PoL-74-VOu" firstAttribute="trailing" secondItem="xrR-dp-lup" secondAttribute="trailing" constant="20" id="OOd-YM-Bf5"/>
+                            <constraint firstItem="M6t-4Q-sQO" firstAttribute="top" secondItem="8id-8k-wMF" secondAttribute="top" id="OcJ-0a-VFv"/>
+                            <constraint firstItem="M6t-4Q-sQO" firstAttribute="leading" secondItem="PoL-74-VOu" secondAttribute="leading" id="YHt-Le-nCb"/>
                             <constraint firstItem="UOw-4O-uYy" firstAttribute="leading" secondItem="PoL-74-VOu" secondAttribute="leading" id="aFo-rz-gxh"/>
                             <constraint firstItem="kYf-qL-MLz" firstAttribute="leading" secondItem="xrR-dp-lup" secondAttribute="leading" id="bTa-rW-3fc"/>
                             <constraint firstItem="xrR-dp-lup" firstAttribute="top" secondItem="kYf-qL-MLz" secondAttribute="bottom" constant="20" id="gaN-DB-FKa"/>
@@ -277,6 +287,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="Lt9-UV-Pej"/>
                     <connections>
+                        <outlet property="bannerAdView" destination="M6t-4Q-sQO" id="xr8-Ru-AuW"/>
                         <outlet property="playerSearchBar" destination="UOw-4O-uYy" id="x8F-YN-yMe"/>
                         <outlet property="rosterCollectionView" destination="xrR-dp-lup" id="kuK-SM-tsZ"/>
                         <outlet property="teamNameLabel" destination="kYf-qL-MLz" id="cgi-R7-T9a"/>
